--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Malekulashter's Website</title>
     </head>
     <body>
-        <h1>Hi, I am Malekulashter.</h1>
-        <h3>Welcome to my websiye</h3>
+        <h1>Hi, I am Malekulashter</h1>
+        <h3>Welcome to my website!</h3>
     </body>
 </html>
