--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <body>
         <h1>Hi, I am Malekulashter Mufaddal</h1>
         <h3>Welcome to my website!</h3>
-        <p>I hope you enjoy my proverbs :)</p>
+        <p>I hope you enjoy my awesome proverbs :)</p>
     </body>
 </html>
