--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
     <head>
         <title>Malekulashter's Website</title>
     </head>
-    <body>
-        <h1>Hi, I am Malekulashter Mufaddal</h1>
+    <body background="lewan.jpg">
+        <h1 style="color: blueviolet">Hi, I am Malekulashter Mufaddal</h1>
         <h3>Welcome to my website!</h3>
         <p>I hope you enjoy my awesome proverbs :)</p>
+        <p>Dont take degrees for job, take it for learning.</p>
     </body>
 </html>
