--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <title>Malekulashter's Website</title>
+        <title>Malekulashtar's Website</title>
     </head>
     <body background="lewan.jpg">
-        <h1 style="color: blueviolet">Hi, I am Malekulashter Mufaddal</h1>
+        <h1 style="color: blueviolet">Hi, I am Malekulashtar Mufaddal</h1>
         <h3>Welcome to my website!</h3>
         <p>I hope you enjoy my awesome proverbs :)</p>
         <p>Dont take degrees for job, take it for learning.</p>
