website name changed

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-        <title>Malekulashtar's Website</title>
+        <title>proverbs that can help you Website</title>
     </head>
-    <body background="lewan.jpg">
+    <body background="second head line">
         <h1 style="color: blueviolet">Hi, I am Malekulashtar Mufaddal</h1>
         <h3>Welcome to my website!</h3>
-        <p>I hope you enjoy my awesome proverbs :)</p>
-        <p>Dont take degrees for job, take it for learning.</p>
+        <h4>I hope you enjoy my awesome proverbs :)</p>
+        <h1>Dont take degrees for job, take it for learning.</p>
     </body>
 </html>
