--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
     <head>
-        <title>proverbs that can help you Website</title>
+        <title>hacbeth proverbs Website</title>
     </head>
     <body background="second head line">
-        <h1 style="color: blueviolet">Hi, I am Malekulashtar Mufaddal</h1>
+        <h1 style="color: cadetblue">Hi, I am Malekulashtar Mufaddal</h1>
         <h3>Welcome to my website!</h3>
         <h4>I hope you enjoy my awesome proverbs :)</p>
-        <h1>Dont take degrees for job, take it for learning.</p>
+        <h2> style="color: red"1)Don't take degrees for jobs take it for learning</h2>
+        <h2>2)</h2>
+
     </body>
 </html>
