--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <h1 style="color: cadetblue">Hi, I am Malekulashtar Mufaddal</h1>
         <h3>Welcome to my website!</h3>
         <h4>I hope you enjoy my awesome proverbs :)</p>
-        <h2> style="color: red"1)Don't take degrees for jobs take it for learning</h2>
+        <h2 style="color: red">1)Don't take degrees for jobs take it for learning</h2>
         <h2>2)</h2>
 
     </body>
