--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>hacbeth proverbs Website</title>
     </head>
-    <body background="second head line">
+    <body background="3rd bgw">
         <h1 style="color: cadetblue">Hi, I am Malekulashtar Mufaddal</h1>
         <h3>Welcome to my website!</h3>
         <h4>I hope you enjoy my awesome proverbs :)</p>
