--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>hacbeth proverbs Website</title>
+        <title>malekulashtar's Website</title>
     </head>
     <body background="3rd bgw">
         <h1 style="color: cadetblue">Hi, I am Malekulashtar Mufaddal</h1>
