--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <head>
         <title>malekulashtar's Website</title>
     </head>
-    <body background="3rd bgw">
-        <h1 style="color: cadetblue">Hi, I am Malekulashtar Mufaddal</h1>
+    <body background="4bgw">
+    <h1 style="color: cadetblue">Hi, I am Malekulashtar Mufaddal</h1>
         <h2>Welcome to my website!</h3>
         <h3>I hope you enjoy my awesome proverbs :)</p>
         <h3 style="color: red">1)Don't take degrees for jobs ,take it for learning</h3>
