--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <h2>Welcome to my website!</h3>
         <h3>I hope you enjoy my awesome proverbs :)</p>
         <h3 style="color: red">1)Don't take degrees for jobs ,take it for learning</h3>
-        <h3>2)nothing if you try to do it</h3>
+        <h3>2)nothing is impossible if you try to do it</h3>
     </body>
 </html>
