add back ground

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>malekulashtar's Website</title>
     </head>
     body {
-      background-image:url("5bgw.jpg")
+      background="5bgw.jpg.html"
     }
      <h1 style="color: cadetblue">Hi, I am Malekulashtar Mufaddal</h1>
         <h2>Welcome to my website!</h3>
