--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>malekulashtar's Website</title>
     </head>
-    <body background="lewan.jpg"></body>
+    <body background="1bgw.html"></body>
      <h1>style="color: cadetblue">Hi, I am Malekulashtar Mufaddal</h1>
         <h2>Welcome to my website!</h3>
         <h3>I hope you enjoy my awesome proverbs :)</p>
