--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>malekulashtar's Website</title>
     </head>
-    <body background="1bgw.html"></body>
+    <body background="Google Image Result for https___i.pinimg.com_originals_a7_d1_6f_a7d16fb0973ffa3c15382256e2f7ddaf.png.html"></body>
      <h1>Hi, I am Malekulashtar Mufaddal</h1>
         <h2>Welcome to my website!</h3>
         <h3>I hope you enjoy my awesome proverbs :)</p>
