--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>malekulashtar's Website</title>
     </head>
-    <body background-image=url("Google Image Result for https___i.pinimg.com_originals_a7_d1_6f_a7d16fb0973ffa3c15382256e2f7ddaf.png.html")></body>
+    <body background=1bgw.png></body>
      <h1>Hi, I am Malekulashtar Mufaddal</h1>
         <h2>Welcome to my website!</h3>
         <h3>I hope you enjoy my awesome proverbs :)</p>
