--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
     <head>
         <title>malekulashtar's Website</title>
     </head>
-    <body background=1bgw.png></body>
+    <body background=p5bgw.jpg.html></body>
      <h1>Hi, I am Malekulashtar Mufaddal</h1>
         <h2>Welcome to my website!</h3>
-        <h3>I hope you enjoy my awesome proverbs :)</p>
+        <h3>I hope you enjoy my proverbs :)</p>
         <h3 style="color: red">1)Don't take degrees for jobs ,take it for learning</h3>
         <h3>nothing is impossible if you try to do it </h3>
     </body>
