add new background

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>malekulashtar's Website</title>
     </head>
-    <body background=p5bgw.jpg.html></body>
+    <body background=p5bgw.jpg.></body>
      <h1>Hi, I am Malekulashtar Mufaddal</h1>
         <h2>Welcome to my website!</h3>
         <h3>I hope you enjoy my proverbs :)</p>
