--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
     <head>
         <title>malekulashtar's Website</title>
     </head>
-    <body background=p5bgw.jpg.></body>
+    <body background=3bgw></body>
      <h1>Hi, I am Malekulashtar Mufaddal</h1>
         <h2>Welcome to my website!</h3>
         <h3>I hope you enjoy my proverbs :)</p>
         <h3 style="color: red">1)Don't take degrees for jobs ,take it for learning</h3>
-        <h3 style="color: indigo">2)nothing is impossible if you try to do it </h3>
+        <h3 style="color: indigo">2)nothing is zimpossible if you try to do it </h3>
     </body>
 </html>
