add new background

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <html>
     <head>
         <title>malekulashtar's Website</title>
+
+        <style>
+             .box{
+                 width: 400px;
+                 height: 200px;
+                 padding: 20px;
+                 margin: 100PX auto;
+                 box-shadow: 0px 0px 10px 2px burlywood;
+                 border:5px lightcyan;
+
+                 background-image: url(images.jpg);
+                 background-size: cover;
+                 text-align: center;
+
+        </style>
     </head>
-    <body background=3bgw></body>
-     <h1>Hi, I am Malekulashtar Mufaddal</h1>
-        <h2>Welcome to my website!</h3>
-        <h3>I hope you enjoy my proverbs :)</p>
-        <h3 style="color: red">1)Don't take degrees for jobs ,take it for learning</h3>
-        <h3 style="color: indigo">2)nothing is zimpossible if you try to do it </h3>
+    
+
+    <div class="box">
+    <h1 style="color:red;">Don't take degres for jobs , take it for learning</h1>
+        
     </body>
 </html>
