--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>malekulashtar's Website</title>
-
+<h1 style="color: lightslategrey">Hi I am Malekulashatar!</h1>
         <style>
              .box{
                  width: 400px;
@@ -20,7 +20,7 @@
     
 
     <div class="box">
-    <h1 style="color:red;">Don't take degres for jobs , take it for learning</h1>
+    <h3 style="color:red;">Don't take degres for jobs , take it for learning</h3>
         
     </body>
 </html>
