--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
     <head>
         <title>malekulashtar's Website</title>
-<h1 style="color: lightslategrey">        Hi I am Malekulashatar!</h1>
-        <style>
-             .box{
+<h1 style="color: lightslategrey">        Hi I am Malekulashatar</h1>
+ <h2 style="color: yellow">Welcome to my website !</h2>   
+ <h2 style="color: aqua">Here you will find some of the best provebs</h2>
+                .box{
                  width: 400px;
                  height: 200px;
                  padding: 20px;
