--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <h1 style="color: lightslategrey">        Hi I am Malekulashatar</h1>
  <h2 style="color: yellow">Welcome to my website !</h2>   
  <h2 style="color: aqua">Here you will find some of the best provebs</h2>
-                .box{
+ <style>
+            .box{
                  width: 400px;
                  height: 200px;
                  padding: 20px;
@@ -15,7 +16,7 @@
                  background-image: url(images.jpg);
                  background-size: cover;
                  text-align: center;
-
+            }   
         </style>
     </head>
     
