--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>malekulashtar's Website</title>
-        <body background="download.jpg">
+        <body background="images (1).jpg">
 <h1 style="color: lightslategrey">        Hi I am Malekulashatar</h1>
  <h2 style="color: yellow">Welcome to my website !</h2>   
  <h2 style="color: aqua">Here you will find some of the best provebs</h2>
