--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <h1 style="color: lightslategrey">        Hi I am Malekulashatar</h1>
  <h2 style="color: yellow">Welcome to my website !</h2>   
  <h2 style="color: aqua">Here you will find some of the best provebs</h2>
+ <h2 style="color: palevioletred ">Proverbs on education</h2>
  <style>
             .box{
                  width: 200px;
