--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     <div class="box">
     <h3 style="color:red;">Don't take degres for jobs , take it for learning.</h3>
 
-    <h1 style="color: rebeccapurple">This website will updated twice a week.</h1>
-      <h1 style="color: teal">Any quaries or feedback text me on mtankara9@gmail</h1>   
+    <p style="color: rebeccapurple">This website will updated twice a week.</p>
+
+      <p style="color: teal">Any quaries or feedback text me on mtankara9@gmail</p>   
     
     </body>
 </html>
