--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     
 
     <div class="box">
-    <h3 style="color:red;">Don't take degres for jobs , take it for learning.</h3>
+    <h3 style="color:red;">Don't take degrees for jobs , take it for learning.</h3>
 
-    <p style="color: rebeccapurple">This website will updated twice a week.</p>
+<p style="color: rebeccapurple">This website will updated twice a week.</p>
 
-      <p style="color: teal">Any quaries or feedback text me on mtankara9@gmail</p>   
+<p style="color: teal">Any quaries or feedback text me on mtankara9@gmail</p>   
     
     </body>
 </html>
